test/suites/fail-lower/L-010.expected
  × One or more errors occured.

Error: L-010

  × Literal cannot be desugared because S/Z are not in program
   ╭─[L-010.pol:3:17]
 2 │ 
 3 │ let foo : Nat { 5 }
   ·                 ─
   ╰────
