test/suites/fail-lower/L-010.pol
data Nat {}

let foo : Nat { 5 }